welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: 'case' expected but '(' found.
  																							(a,a,a) => 20
                                                                                                                                                                                        ^greenTicket:3: error: '}' expected but ';' found.
  																							(a,_,a) => 10
^greenTicket:8: error: eof expected but '}' found.
 }
 ^