welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {(a,b,c) match {
  																							(a,a,a) => 20
  																							(a,_,a) => 10
                                                (a,a,_) => 10
  																							(_,b,b) => 10
  (_,_,_) => 0}
}